--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "node --inspect=0.0.0.0:9229 -r ts-node/register --trace-warnings --experimental-specifier-resolution=node src/index.ts",
+    "dev": "tsc --watch & nodemon --exec node --inspect=0.0.0.0:9229 -r ts-node/register --trace-warnings --experimental-specifier-resolution=node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -29,6 +29,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "joi": "^17.13.3",
     "joi-to-swagger": "^6.2.0",
     "jsonwebtoken": "^9.0.2",
