--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "i18next": "^24.2.2",
+    "i18next-fs-backend": "^2.6.0",
+    "i18next-http-middleware": "^3.7.1",
     "joi": "^17.13.3",
     "joi-to-swagger": "^6.2.0",
     "jsonwebtoken": "^9.0.2",
@@ -43,6 +46,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/i18next": "^12.1.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.13.4",
     "nodemon": "^3.1.9",
